# bagels-quick

./: README.md  pyproject.toml
src/bagels_quick/: __init__.py  cli.py
